gcc/testsuite/gcc.dg/c11-attr-syntax-1.c
/* Test C2x attribute syntax: rejected in C11.  */
/* { dg-do compile } */
/* { dg-options "-std=c11 -pedantic-errors" } */

[[]]; /* { dg-error "attributes before C2X" } */

void f [[]] (void); /* { dg-error "attributes before C2X" } */
